# astro-monitor

./: Cargo.toml  README.md
src/: main.rs
src/system/: mod.rs
src/tui/: mod.rs
src/tui/app/: mod.rs  status.rs
